Bug 1257369 - Suppress the DisplayPort when scrolling via nsSliderFrame. r=kats

MozReview-Commit-ID: 8I3UfWlkdPq